[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "prophet>=1.1.6",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.61",
]
